# rss_to_twitter_bot_lambda

./: Cargo.toml  README.md
src/: main.rs
src/common/TwitterAccount2/: access_key  access_secret
src/common/TwitterAccountN/: consumer_key  consumer_secret
