[package]
name = "rss_to_twitter_bot_lambda"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true # Automatically strip symbols from the binary.
debug = false
lto = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
chrono = "0.4.22"
rss = "2.0.1"
atom_syndication = "0.11.0"
reqwest = { version = "0.11.12", features = ["json"] }
tokio = { version = "1.21.2", features = ["full"]} 
openssl = { version = "0.10.42", features = ["vendored"] }
egg-mode = "0.16.0"
lambda_runtime = "0.7.0"
aws_lambda_events = "0.7.1"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["fmt"] }
